terraform/dynamic-block/without-dynamic.tf
resource "aws_security_group" "manual_create" {
  name   = "testing-manual-sg"
  vpc_id = "vpc-047489d5215aae1cc"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 2049
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 2001
    to_port     = 2001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    ingress {
    from_port   = 2002
    to_port     = 2002
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
